Fixed issue with webadmin page webdashboardsignin div wrapping to a new line when zoom is set to less than 100%. Issue: MIRTH-2670

--- a/server/public_html/css/main.css
+++ b/server/public_html/css/main.css
@@ -496,7 +496,7 @@ tr.notAccepted {
 }
 
 .subpage #centerWrapper {
-	width: 700px; 
+	width: 701px; 
 	background-color: #fff;
 	background-image: -webkit-gradient(linear, left top, left bottom, from(#fff),
 		to(#fff) );
